# AK_lab2

./: CMakeLists.txt  Makefile
src/: Calculator.cpp  Calculator.h  main.cpp
